parkrun-stats - Max regionnaire count and runs needed working.